--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,10 @@ build-backend = 'setuptools.build_meta'
 
 [tool.setuptools_scm]
 write_to = "cometsuite/_version.py"
+
+[project.optional-dependencies]
+docs = [
+    "sphinx",
+    "sphinx-automodapi",
+    "numpydoc",
+]
