--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,17 @@
 [project]
-name = "pycometsuite"
+name = "cometsuite"
 description = "Simulate cometary dust dynamics."
 readme = "README.md"
-authors = [
-    { name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }
-]
+authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
 license = { text = "MIT License" }
 dependencies = [
     "numpy",
     "scipy",
     "astropy>=4",
     "mskpy>=3",
-    "cython",
     "spiceypy",
     "matplotlib",
+    "sbpy>=0.3",
 ]
 dynamic = ["version"]
 
@@ -21,15 +19,14 @@ dynamic = ["version"]
 homepage = "https://github.com/mkelley/pycometsuite"
 
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "cython"]
 build-backend = 'setuptools.build_meta'
+
+[tool.setuptools]
+include-package-data = true
 
 [tool.setuptools_scm]
 write_to = "cometsuite/_version.py"
 
 [project.optional-dependencies]
-docs = [
-    "sphinx",
-    "sphinx-automodapi",
-    "numpydoc",
-]
+docs = ["sphinx>=1.3", "sphinx-automodapi", "numpydoc"]
