Install gsl for RTD

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,10 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.10"
+  apt_packages:
+    - libgsl27
+    - libgsl-dev
+    - libgslcblas0
 
 python:
   install:
