Testing post-install command

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,10 @@ build:
     - libgsl27
     - libgsl-dev
     - libgslcblas0
+  jobs:
+    post-install:
+      - cat ~/.config/mskpy/mskpy.cfg
+
 
 python:
   install:
