--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,7 @@ build:
     - libgslcblas0
   jobs:
     post_install:
+      - python3 -c 'import mskpy.config'
       - cat ~/.config/mskpy/mskpy.cfg
 
 
