--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,9 +10,10 @@ build:
     - libgslcblas0
   jobs:
     post_install:
-      - python3 -c "import mskpy.config"
-      - cat ~/.config/mskpy/mskpy.cfg
-
+      - mkdir -p $HOME/data/kernels
+      - wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/lsk/latest_leapseconds.tls -O $HOME/data/kernels/naif.tls
+      - wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/pck/pck00011.tpc -O $HOME/data/kernels/pck.tpc
+      - wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/planets/de440s.bsp -O $HOME/data/kernels/planets.bsp
 
 python:
   install:
