Add build_docs description

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     git+https://github.com/mkelley/mskpy.git#egg=mskpy
 
 [testenv:build_docs]
+description = invoke sphinx-build to build the HTML docs
 extras = docs
 commands = 
     pip freeze
