--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,7 @@ include-package-data = true
 [tool.setuptools_scm]
 write_to = "cometsuite/_version.py"
 
+[tool.setuptools.packages.find]
+
 [project.optional-dependencies]
 docs = ["sphinx>=1.3", "sphinx-automodapi", "numpydoc"]
