--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 dist
-cometsuite*egg-info
+**cometsuite*egg-info
 build
+docs/_build
 *~
 *.pyc
 *.so
@@ -9,3 +10,7 @@ cometsuite/integrator/prop2b.c
 cometsuite/integrator/bsint.c
 .vscode
 .hypothesis
+
+_version.py
+.venv
+.tox
