--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,5 @@ description = invoke sphinx-build to build the HTML docs
 extras = docs
 commands = 
     pip freeze
-    sphinx-build docs docs/_build/html -W -b html {posargs}
+    ; sphinx-build docs docs/_build/html -W -b html {posargs}
+    sphinx-build docs docs/_build/html -b html {posargs}
