Progess getting testing back to work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,4 @@ write_to = "cometsuite/_version.py"
 
 [project.optional-dependencies]
 docs = ["sphinx>=1.3", "sphinx-automodapi", "numpydoc"]
+test = ["pytest"]
